<resources>
    <string name="app_name">IF570_LAB_UTS_HansPhilemonLimanza_70710</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="like">Like</string>
    <string name="pin">Pin</string>
    <string name="image_post">Image Post</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="umn_story">UMN Story</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="nim">NIM</string>
    <string name="name">Name</string>
    <string name="write_your_post_here">Write your post here</string>
    <string name="upload_image">Upload Image</string>
    <string name="preview_image">Preview Image</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_image">Profile Image</string>
</resources>